--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#10b981" />
 
   <!-- Preconnect to external domains -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,44 +33,82 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <meta name="description"
-    content="Dr. Joints provides natural Ayurvedic solutions for joint pain relief, promoting flexibility and recovery with premium oils crafted from traditional herbs.,  Discover Dr. Joint’s natural tips to ease chronic joint pain, reduce inflammation, and improve mobility—no medication needed. Move freely again. " />
+    content="Dr. Alcofree - Natural herbal supplement to reduce alcohol cravings and support sobriety. Made with Milk Thistle, Dandelion Root, and Ashwagandha. 100% natural, safe, and effective for alcohol recovery journey. Start your path to freedom today." />
 
   <meta name="keywords"
-    content="Ayurvedic joint pain relief oil, muscle pain relief, natural remedies, herbal oil for arthritis, joint strengthening oil, Dr. Joints Chronic Joint Pain    " />
+    content="alcohol recovery supplement, reduce alcohol cravings, natural sobriety support, herbal alcohol detox, liver support supplement, addiction recovery, alcohol-free lifestyle, Dr. Alcofree, natural alcohol treatment, withdrawal support, liver detox herbs" />
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Dr. Alcofree - Natural Support for Alcohol Recovery & Sobriety" />
+  <meta property="og:description" content="Reduce alcohol cravings naturally with Dr. Alcofree. Herbal supplement with Milk Thistle, Dandelion Root & Ashwagandha. 100% natural, safe & effective." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://dralcofree.com" />
+  <meta property="og:image" content="assets/img/logo.png" />
+  <meta property="og:site_name" content="Dr. Alcofree" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Dr. Alcofree - Natural Alcohol Recovery Support" />
+  <meta name="twitter:description" content="Natural herbal supplement to reduce alcohol cravings and support your sobriety journey. 100% safe & effective." />
+  <meta name="twitter:image" content="assets/img/logo.png" />
+
+  <!-- Additional SEO Meta Tags -->
+  <meta name="author" content="Dr. Alcofree" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="English" />
+  <meta name="revisit-after" content="7 days" />
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title> Dr. Joints- Ayurvedic Body joints & Muscles Pain relief oil </title>
-  <meta property="og:image" content="assets/img/logo.png" />
+  <title>Dr. Alcofree - Natural Herbal Supplement for Alcohol Recovery & Sobriety Support</title>
   <link rel="icon" href="assets/img/logo.png" />
   <link rel="apple-touch-icon-precomposed" href="assets/img/logo.png" />
   <meta name="msapplication-TileImage" content="assets/img/logo.png" />
+  <meta name="msapplication-TileColor" content="#10b981" />
+  
+  <!-- Structured Data for SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Product",
+    "name": "Dr. Alcofree Natural Alcohol Recovery Supplement",
+    "description": "Natural herbal supplement to reduce alcohol cravings and support sobriety with Milk Thistle, Dandelion Root, and Ashwagandha",
+    "brand": {
+      "@type": "Brand",
+      "name": "Dr. Alcofree"
+    },
+    "offers": {
+      "@type": "Offer",
+      "price": "2990",
+      "priceCurrency": "INR",
+      "availability": "https://schema.org/InStock"
+    },
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.5",
+      "reviewCount": "10000"
+    }
+  }
+  </script>
+
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-KHGK2S5D');</script>
-  <!-- End Google Tag Manager -->
+  
+  
 </head>
 
 <body>
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KHGK2S5D"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
-  <div id="root"></div>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-L16EPQ1Y4N"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9M5RBPLW4X"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-L16EPQ1Y4N');
+    gtag('config', 'G-9M5RBPLW4X');
   </script>
+  
+  <div id="root"></div>
+  
+
 </body>
 
 </html>
