--- a/public/index.html
+++ b/public/index.html
@@ -114,6 +114,15 @@
 
     gtag('config', 'G-9M5RBPLW4X');
   </script>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9M5RBPLW4X"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-9M5RBPLW4X');
+  </script>
   
   <div id="root"></div>
   
